--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@tanstack/react-query": "^5.81.2",
     "axios": "^1.9.0",
     "firebase": "^11.8.1",
     "react": "^19.1.0",
